unpackaged/main/default/objects/Target__c/fields/MarginClosed__c.field-meta.xml
<CustomField>
    <fullName>MarginClosed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New Margin Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>