unpackaged/main/default/objects/Target__c/fields/MarginRecognised__c.field-meta.xml
<CustomField>
    <fullName>MarginRecognised__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New Margin Recognised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>