unpackaged/main/default/objects/Target__c/fields/MarginTarget__c.field-meta.xml
<CustomField>
    <fullName>MarginTarget__c</fullName>
    <label>New Margin Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>