unpackaged/main/default/objects/Target__c/fields/PercentRecognisedMarginTargetAchieved__c.field-meta.xml
<CustomField>
    <fullName>PercentRecognisedMarginTargetAchieved__c</fullName>
    <formula>MarginRecognised__c / MarginTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% New Recognised Margin Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>