unpackaged/main/default/objects/Target__c/fields/PercentRecognisedRevenueTargetAchieved__c.field-meta.xml
<CustomField>
    <fullName>PercentRecognisedRevenueTargetAchieved__c</fullName>
    <formula>RevenueRecognised__c / RevenueTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% New Recognised Revenue Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>