unpackaged/main/default/objects/Target__c/fields/PercentSalesMarginTargetAchieved__c.field-meta.xml
<CustomField>
    <fullName>PercentSalesMarginTargetAchieved__c</fullName>
    <formula>MarginClosed__c / MarginTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% New Sales Margin Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>