unpackaged/main/default/objects/Target__c/fields/PercentSalesRevenueTargetAchieved__c.field-meta.xml
<CustomField>
    <fullName>PercentSalesRevenueTargetAchieved__c</fullName>
    <formula>RevenueClosed__c / RevenueTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% New Sales Revenue Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>