unpackaged/main/default/objects/Target__c/fields/RevenueClosed__c.field-meta.xml
<CustomField>
    <fullName>RevenueClosed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New Revenue Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>