unpackaged/main/default/objects/Target__c/fields/RevenueRecognised__c.field-meta.xml
<CustomField>
    <fullName>RevenueRecognised__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New Revenue Recognised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>