unpackaged/main/default/objects/Target__c/fields/RevenueTarget__c.field-meta.xml
<CustomField>
    <fullName>RevenueTarget__c</fullName>
    <label>New Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>