unpackaged/main/default/objects/Target__c/listViews/AllTargets.listView-meta.xml
<ListView>
    <fullName>AllTargets</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>RevenueTarget__c</columns>
    <columns>MarginTarget__c</columns>
    <columns>PercentRecognisedMarginTargetAchieved__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Targets</label>
</ListView>